# KanesMaidBot

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
.github/: FUNDING.yml
migrations/2021-08-18-035804_create_server/: down.sql  up.sql
src/: command.rs  config.rs  constants.rs  data.rs  eventhandler.rs  main.rs  models.rs  schema.rs
src/commands/: mod.rs
src/commands/developer/: info.rs
src/events/: mod.rs  ready.rs
src/models/: server.rs
src/utils/: db_connection.rs  message.rs  mod.rs
translations/: enUS.json
